--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,6 +5,7 @@
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".DashboardActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -17,17 +18,16 @@
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
+                style="@style/Widget.Sinoman.Toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                android:layout_height="?attr/actionBarSize" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
@@ -39,11 +39,10 @@
                 <!-- Section 1: Registration Prompt -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/sectionOneCard"
+                    style="@style/Widget.Sinoman.CardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="4dp">
+                    android:layout_marginBottom="16dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -55,6 +54,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Kamu belum mengisi pendataan, lakukan pendaftaran sekarang!"
+                            android:textColor="@color/black"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -64,17 +64,18 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="end"
                             android:layout_marginTop="8dp"
-                            android:text="Daftar!" />
+                            android:backgroundTint="@color/golden_brown"
+                            android:text="Daftar!"
+                            android:textColor="@color/black" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <!-- Section 2: Completion Percentage -->
                 <androidx.cardview.widget.CardView
+                    style="@style/Widget.Sinoman.CardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="4dp">
+                    android:layout_marginBottom="16dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -88,6 +89,7 @@
                             android:layout_height="wrap_content"
                             android:text="0%"
                             android:textAlignment="center"
+                            android:textColor="@color/dark_blue"
                             android:textSize="32sp"
                             android:textStyle="bold" />
 
@@ -98,7 +100,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:max="100"
-                            android:progress="0" />
+                            android:progress="0"
+                            android:progressTint="@color/golden_brown" />
 
                         <TextView
                             android:id="@+id/completionStatusTextView"
@@ -107,6 +110,7 @@
                             android:layout_marginTop="8dp"
                             android:text="Data mu belum lengkap! Ayo lengkapi sekarang!"
                             android:textAlignment="center"
+                            android:textColor="@color/black"
                             android:textSize="16sp" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -118,6 +122,7 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigation"
+            style="@style/Widget.Sinoman.BottomNavigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -130,7 +135,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/white"
         app:headerLayout="@layout/nav_header"
+        app:itemIconTint="@color/dark_blue"
+        app:itemTextColor="@color/black"
         app:menu="@menu/drawer_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
