--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="?attr/colorPrimary"
+    android:background="@color/dark_blue"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
@@ -21,6 +21,7 @@
         android:layout_marginTop="8dp"
         android:text="User Name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
 
