--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,23 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_home"
-        android:icon="@android:drawable/ic_menu_compass"
+        android:icon="@drawable/ic_home"
         android:title="Beranda" />
     <item
         android:id="@+id/nav_notifications"
-        android:icon="@android:drawable/ic_popup_reminder"
+        android:icon="@drawable/ic_nav_notifications"
         android:title="Notifikasi" />
     <item
         android:id="@+id/nav_form"
-        android:icon="@android:drawable/ic_menu_edit"
-        android:title="Form Page" />
+        android:icon="@drawable/ic_document"
+        android:title="Form" />
     <item
         android:id="@+id/nav_help"
-        android:icon="@android:drawable/ic_menu_help"
+        android:icon="@drawable/ic_nav_help"
         android:title="Bantuan" />
     <item
         android:id="@+id/nav_profile"
-        android:icon="@android:drawable/ic_menu_myplaces"
+        android:icon="@drawable/ic_nav_profile"
         android:title="Profil" />
 </menu>
-
